--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,14 +8,15 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/weather"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="activity.ChooseAreaActivity"
+            android:name="com.coolweather.activity.ChooseAreaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="activity.WeatherActivity"></activity>
+        <activity android:name="com.coolweather.activity.WeatherActivity"></activity>
+        <activity android:name="com.coolweather.activity.FutrueWeather"></activity>
+        <service android:name="com.coolweather.service.AutoUpdateService"></service>
+        <receiver android:name="com.coolweather.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
